dashboard-ingress-usecase/configs/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: dashboard-ingress
    namespace: kubernetes-dashboard
spec:
    # TO ENABLE HTTS
    tls:
        - hosts:
            - myapp.com
                secretName: tls-secret

    # REDIRECT RULES
    rules:
            # FROM
        -   host: foo-dashboard.com
            http:
                paths:
                    - backend:
                        # TO
                        serviceName: kubernetes-dashboard
                        servicePort: 80
